# stonfi-metrics

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: build.yml  coverage.yml  release.yml
crates/metrics/: AGENTS.md  Cargo.toml  README.md
crates/metrics/src/: base_metrics.rs  cache_stats_metric.rs  duration_tracker.rs  utils.rs
docs/superpowers/plans/: 2026-06-20-automatic-metrics-registration.md
examples/: simple_init.rs
src/: base_metrics.rs  cache_stats_metric.rs  constants.rs  duration_tracker.rs  initializer.rs  lib.rs  metrics_cell.rs  server.rs
src/initializer/: tests.rs
