[workspace]
resolver = "2"
members = [
    "crates/metrics",
]

[workspace.package]
edition = "2024"
authors = ["STON.fi", "Sild <silddev@pm.com"]
license = "Apache-2.0"
repository = "https://github.com/ston-fi/stonfi-rust"
rust-version = "1.85"
readme = "README.md"
publish = false

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
parking_lot = "0.12"
prometheus = "0.14"
reqwest = "0.12"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[profile.release]
debug = true
